# HoteLink

./: .dockerignore  .env.docker.dev.example  .env.docker.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  celerybeat-schedule  manage.py  pyproject.toml
backend/apps/: __init__.py
backend/apps/api/: __init__.py  apps.py  authentication.py  permissions.py  responses.py  serializers.py  tests.py  urls.py  views.py
backend/apps/bookings/: __init__.py  admin.py  apps.py  models.py  tasks.py
backend/apps/crm/: __init__.py  admin.py  apps.py  models.py
backend/apps/hotels/: __init__.py  admin.py  apps.py  models.py
backend/apps/operations/: __init__.py  admin.py  apps.py  models.py
backend/apps/payments/: __init__.py  admin.py  apps.py  models.py
backend/apps/reports/: __init__.py  admin.py  apps.py  models.py
backend/apps/users/: __init__.py  admin.py  apps.py  models.py  views.py
backend/config/: __init__.py  ai.py  asgi.py  celery.py  urls.py  views.py  wsgi.py
backend/config/settings/: __init__.py  base.py  dev.py  prod.py
backend/docker/: entrypoint.dev.sh  entrypoint.sh
backend/prompts/anomaly_report/: system.j2  user.j2
backend/prompts/booking_assistant/: slot_system.j2  slot_user.j2  system.j2  user.j2
backend/prompts/business_report/: system.j2  user.j2
backend/prompts/content_generate/: system.j2  user.j2
backend/prompts/customer_service/: system.j2  user.j2
backend/prompts/hotel_compare/: system.j2  user.j2
backend/prompts/marketing_copy/: system.j2  (+1 more)
(+151 files in other folders)
